# APIPhantom

./: .dockerignore  .gitignore  gunicorn.conf.py  manage.py  pyproject.toml
.github/workflows/: build-apiphantom.yaml
apip/: asgi.py  health_check.py  settings.py  urls.py  wsgi.py
apip/admin/: apps.py  sites.py
apip/admin/widgets/: __init__.py  ace_widget.py
apip/fackers/: __init__.py
apip/middlewares/: subdomain_mock.py
apip/services/: admin.py  apps.py  models.py
apip/services/migrations/: 0001_initial.py
apip/testcases/: admin.py  apps.py  models.py
apip/testcases/admins/: __init__.py  authenticators.py  testcase.py
apip/testcases/migrations/: 0001_initial.py
apip/testcases/templates/: testcase_inline.html
apip/testplans/: admin.py  apps.py  models.py  urls.py  views.py
apip/testplans/admins/: __init__.py  testplan.py
apip/testplans/migrations/: 0001_initial.py  0002_testplan_exact_value.py
application/: run_tests.py
application/fackers/: __init__.py  cli_jsf_faker.py  interfaces.py
application/test_plan/: create.py  default_test_case
application/test_runs/: __init__.py  create.py  set_status.py
application/usecases/: __init__.py  exceptions.py  run_testcase.py
contrib/: gen_env.py
docker/: Dockerfile  docker-compose.yml  start
jsffaker/: cli.js  package-lock.json  package.json
