[tool.poetry]
name = "APIPhantom"
version = "0.1.0"
description = ""
authors = ["sandro.meireles <sandro.meirelesdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
djangorestframework = "^3.14.0"
jsonschema = "^4.20.0"
schedule = "^1.2.1"
gunicorn = "^21.2.0"
django-environ = "^0.11.2"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
